--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.3.8"
   },
   "devDependencies": {
@@ -21,6 +22,6 @@
     "nodemon": "^2.0.16"
   },
   "jest": {
-    "testEnvironment": "node" 
+    "testEnvironment": "node"
   }
 }
