--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -18,8 +18,10 @@
     "mongoose": "^6.3.8"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^28.1.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.3"
   },
   "jest": {
     "testEnvironment": "node"
