--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -39,6 +39,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.3.0",
     "eslint-plugin-jest": "^26.6.0",
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
