--- a/part8/library-graphql-backend/package.json
+++ b/part8/library-graphql-backend/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^3.10.1",
-    "graphql": "^16.6.0"
+    "dotenv": "^16.0.1",
+    "graphql": "^16.6.0",
+    "mongoose": "^6.5.3"
   }
 }
