--- a/part9/patientor-backend/.eslintrc
+++ b/part9/patientor-backend/.eslintrc
@@ -25,6 +25,6 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": "./exercises/fullstackopen/part9/patientor-backend/tsconfig.json"
+    "project": "./tsconfig.json"
   }
 }
